cabal-version:      2.4
name:               amerihac2026
version:            0.1.0.0
synopsis:           A simple Scotty web application
license:            BSD-3-Clause
author:             Your Name
maintainer:         your.email@example.com
category:           Web
build-type:         Simple

executable amerihac2026
    main-is:          Main.hs
    build-depends:    base ^>=4.14.0.0 || ^>=4.15.0.0 || ^>=4.16.0.0 || ^>=4.17.0.0 || ^>=4.18.0.0 || ^>=4.19.0.0 || ^>=4.20.0.0,
                      scotty ^>=0.12 || ^>=0.20 || ^>=0.21 || ^>=0.22,
                      text,
                      aeson,
                      postgresql-simple,
                      bytestring,
                      time,
                      http-types
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
